--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -54,6 +54,53 @@
     },
     "loading": {
       "message": "Loading projects..."
+    },
+    "list": {
+      "1": {
+        "title": "E-commerce Platform",
+        "description": "A full-stack e-commerce solution built with modern web technologies. Features include user authentication, payment processing, inventory management, and responsive design for optimal user experience across all devices.",
+        "image": "https://img.freepik.com/free-photo/vertical-banners-sales-promo_23-2150653391.jpg?ga=GA1.1.2043908255.1756389541&semt=ais_hybrid&w=740&q=80",
+        "technologies": ["Vue.js", "Node.js", "MongoDB", "Stripe"],
+        "links": [
+          {
+            "type": "demo",
+            "label": "Live Demo",
+            "url": "https://example.com"
+          },
+          {
+            "type": "github",
+            "label": "GitHub",
+            "url": "https://github.com/example"
+          }
+        ]
+      },
+      "2": {
+        "title": "Task Management App",
+        "description": "A collaborative task management application that helps teams organize projects, assign tasks, and track progress. Built with real-time updates and intuitive drag-and-drop functionality.",
+        "image": "https://img.freepik.com/free-photo/online-shopping-concept_23-2151896814.jpg?ga=GA1.1.2043908255.1756389541&semt=ais_hybrid&w=740&q=80",
+        "technologies": ["React", "Firebase", "Material-UI"],
+        "links": [
+          { "type": "demo", "label": "Try It", "url": "https://example.com" }
+        ]
+      },
+      "3": {
+        "title": "Weather Dashboard",
+        "description": "An interactive weather dashboard that provides real-time weather information, forecasts, and historical data visualization. Features location-based services and customizable widgets.",
+        "image": "https://img.freepik.com/free-vector/infographic_53876-25853.jpg?ga=GA1.1.2043908255.1756389541&semt=ais_hybrid&w=740&q=80",
+        "technologies": ["JavaScript", "Chart.js", "OpenWeather API"],
+        "links": [
+          {
+            "type": "demo",
+            "label": "View Demo",
+            "url": "https://example.com"
+          },
+          {
+            "type": "github",
+            "label": "Source Code",
+            "url": "https://github.com/example"
+          }
+        ]
+      }
     }
   },
   "resume": {
